# BeerService.Device

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  Kconfig.projbuild  iot_device.c
main/cmake/: certificate_configuration.cmake.example
